# One-time-secrets

./: .env.template  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  supervisord.ini
alembic/: env.py
alembic/versions/: 2025_04_10_1034-41edce534a09_create_all_tables.py
api/: config.py  crud.py  db.py  dependencies.py  encryption.py  exceptions.py  main.py  middlewares.py  models.py  responses.py  routes.py  schemas.py  uitls.py
